--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookstore</title>
     <style>
-        body {
+  body {
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url('background.jpg'); /* Replace with your background image */
+            background-image: url('background.jpg');
             background-size: cover;
             background-position: center;
             color: #333;
@@ -19,6 +19,7 @@
             background-color: #fff;
             padding: 20px;
             text-align: center;
+            color: #333; /* Improved contrast */
         }
 
         nav {
